fix some alignment in skills

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -547,7 +547,7 @@ body {
 }
 
 .escape-artist {
-  bottom: 59.8%;
+  bottom: 59.9%;
 }
 
 .fly {
@@ -563,7 +563,7 @@ body {
 }
 
 .intimidate {
-  bottom: 54%;
+  bottom: 54.1%;
 }
 
 .knowledge-arcana {
@@ -575,7 +575,7 @@ body {
 }
 
 .knowledge-engineering {
-  bottom: 49.6%;
+  bottom: 49.7%;
 }
 
 .knowledge-geography {
@@ -595,7 +595,7 @@ body {
 }
 
 .knowledge-nobility {
-  bottom: 42.3%;
+  bottom: 42.4%;
 }
 
 .knowledge-planes {
@@ -611,7 +611,7 @@ body {
 }
 
 .perception {
-  bottom: 36.5%;
+  bottom: 36.6%;
 }
 
 #perform-1-info, #perform-2-info {
@@ -669,7 +669,7 @@ body {
 }
 
 .use-magic-device {
-  bottom: 19%;
+  bottom: 19.1%;
 }
 
 .conditional-modifiers, .languages {
